--- a/OmneFictio.Web/Views/Home/Post.cshtml
+++ b/OmneFictio.Web/Views/Home/Post.cshtml
@@ -28,9 +28,9 @@
         <div class="p-footer">
             <div class="p-footer-wrap">
                 <div class="p-evaluation">
-                    <i class="bi bi-hand-thumbs-up post-vote p-likebtn" data-action="like"></i>
+                    <i class="bi bi-hand-thumbs-up post-vote p-likebtn likebtn" data-action="like"></i>
                     <span class="p-likes">5432</span>
-                    <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn" data-action="dislike"></i>
+                    <i class="bi bi-hand-thumbs-down post-vote p-dislikebtn dislikebtn" data-action="dislike"></i>
                     <span class="p-rate">8/10</span>
                 </div>
                 <div class="p-user">
@@ -109,32 +109,30 @@
             </div>
             <div class="c-footer">
                 <div class="c-evaluation">
-                    <i class="bi bi-hand-thumbs-up c-likebtn"></i>
+                    <i class="bi bi-hand-thumbs-up c-likebtn likebtn"></i>
                     <span class="c-likes">5465</span>
-                    <i class="bi bi-hand-thumbs-down c-dislikebtn"></i>
-                    <a href="#">Reply</a>
+                    <i class="bi bi-hand-thumbs-down c-dislikebtn dislikebtn"></i>
+                    <a href="#" class="c-replybtn">Reply</a>
                 </div>
                 <a href="go get the replies mf" class="get_replies-cont">
                     <span>4 replies</span>
                 </a>
             </div>
         </div>
-        <div class="reply-cont">
-            <div class="reply">
-                <div class="r-text">
-                    <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
+        <div class="reply">
+            <div class="r-text">
+                <span>This is a reply right here. This is a reply right here. This is a reply right here.</span>
+            </div>
+            <div class="r-footer">
+                <div class="r-evaluation">
+                    <i class="bi bi-hand-thumbs-up r-likebtn likebtn"></i>
+                    <span class="r-likes">5465</span>
+                    <i class="bi bi-hand-thumbs-down r-dislikebtn dislikebtn"></i>
+                    <a href="#" class="r-replybtn">Reply</a>
                 </div>
-                <div class="r-footer">
-                    <div class="r-evaluation">
-                        <i class="bi bi-hand-thumbs-up r-likebtn"></i>
-                        <span class="r-likes">5465</span>
-                        <i class="bi bi-hand-thumbs-down r-dislikebtn"></i>
-                        <a href="#">Reply</a>
-                    </div>
-                    <div class="r-user">
-                        <span class="r-username">MrBombastic</span>
-                        <img src="/images/users/user_no_photo_300x300.png">
-                    </div>
+                <div class="r-user">
+                    <span class="r-username">MrBombastic</span>
+                    <img src="/images/users/user_no_photo_300x300.png">
                 </div>
             </div>
         </div>
