--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -38,6 +38,7 @@ main{
                 display: flex;
                 flex-direction: column;
                 flex-grow: 1;
+                overflow: auto;
                 .p-title-cont{
                     display: flex;
                     flex-wrap: wrap;
@@ -77,20 +78,11 @@ main{
                     flex-direction: row;
                     justify-content: flex-start;
                     align-items: center;
-                    color: var(--text-color-hover1);
                     i{
                         font-size: 1.2rem;
                         cursor: pointer;
                         transition: color 0.2s ease;
-                        &:hover{
-                            color: var(--text-color1);
-                        }
-                    }
-                    .p-likebtn.active{
-                        color: #1198ff;
-                    }
-                    .p-dislikebtn.active{
-                        color: #bd1313;
+                        color: var(--text-color2);
                     }
                     .p-likes{
                         padding: 0 8px;
@@ -303,6 +295,7 @@ img{
     .ac-footer{
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
         align-items: center;
         width: 100%;
         padding: 0 6px;
@@ -314,8 +307,7 @@ img{
             .ac-username{
                 font-size: 0.9rem;
                 cursor: pointer;
-                margin-left: 8px;
-                padding-right: 8px;
+                padding: 0 8px;
                 text-overflow: ellipsis;
                 white-space: nowrap;
                 overflow: hidden;
@@ -337,6 +329,7 @@ img{
             transition: font-size 0.1s ease;
             color: var(--text-color1);
             text-decoration: underline;
+            margin-left: auto;
             &:hover{
                 text-decoration: underline;
             }
@@ -344,8 +337,171 @@ img{
     }
 }
 
-
-
+.comments{
+    width: 100%;
+    .comment-cont{
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        padding: 6px 0 14px;
+        border-top: 2px solid var(--background-color2);
+        .comment{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            //box-shadow: 0px 6px 8px -7px #00000060;
+            .c-header{
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: 0 6px;
+                font-family: "Itim", cursive;
+                .c-user{
+                    display: flex;
+                    align-items: center;
+                    img{
+                        height: 1.3rem;
+                        width: 1.3rem;
+                        border-radius: 50%;
+                        cursor: pointer;
+                    }
+                    .c-username{
+                        font-size: 0.8rem;
+                        cursor: pointer;
+                        padding: 0 8px;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        max-width: 180px;
+                    }
+                }
+                .c-menu{
+                    display: flex;
+                    height: 100%;
+                    padding: 0 10px;
+                    font-size: 1.6rem;
+                    i{
+                        display: flex;
+                    }
+                }
+            }
+            .c-text{
+                padding: 0px 10px;
+                margin: 6px 0;
+                font-size: 0.8rem;
+                font-family: "Gudea", sans-serif;
+                line-height: 1rem;
+                span{
+                    flex-grow: 1;
+                    display: -webkit-box;
+                    -webkit-line-clamp: 10;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+            .c-footer{
+                font-family: "Itim", cursive;
+                display: flex;
+                flex-flow: wrap;
+                align-items: flex-start;
+                .c-evaluation{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    padding-left: 10px;
+                    color: var(--text-color2);
+                    i{
+                        font-size: 1.2rem;
+                        cursor: pointer;
+                        transition: color 0.2s ease;
+                    }
+                    .c-likes{
+                        padding: 0 8px;
+                    }
+                    .c-replybtn{
+                        margin-left: 14px;
+                        font-family: 'Josefin Sans', sans-serif;
+                        color: var(--text-color1);
+                        padding: 2px 0 0;
+                        margin-bottom: -1px;
+                    }
+                }
+                .get_replies-cont{
+                    background-color: var(--reply-bgcolor);
+                    padding: 4px 26px;
+                    border-radius: 6px 6px 0 0;
+                    text-decoration: underline;
+                    margin-left: auto;
+                }
+            }
+        }
+        .reply{
+            display: flex;
+            flex-direction: column;
+            width: 92%;
+            border-radius: 6px 0 6px 6px;
+            background-color: var(--reply-bgcolor);
+            padding: 6px 0;
+            .r-text{
+                padding: 0 10px 6px;
+                font-size: 0.8rem;
+                font-family: "Gudea", sans-serif;
+                line-height: 1rem;
+            }
+            .r-footer{
+                font-family: "Itim", cursive;
+                display: flex;
+                flex-flow: wrap;
+                align-items: center;
+                .r-evaluation{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    padding-left: 6px;
+                    color: var(--text-color2);
+                    i{
+                        font-size: 1.1rem;
+                        cursor: pointer;
+                        transition: color 0.2s ease;
+                    }
+                    .r-likes{
+                        padding: 0 6px;
+                    }
+                    .r-replybtn{
+                        margin-left: 10px;
+                        font-family: 'Josefin Sans', sans-serif;
+                        color: var(--text-color1);
+                        padding: 1px 0 0;
+                        margin-bottom: -1px;
+                    }
+                }
+                .r-user{
+                    display: flex;
+                    align-items: center;
+                    padding-right: 6px;
+                    margin-left: auto;
+                    .r-username{
+                        font-size: 0.8rem;
+                        cursor: pointer;
+                        padding: 0 8px;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        max-width: 180px;
+                    }
+                    img{
+                        height: 1.3rem;
+                        width: 1.3rem;
+                        border-radius: 50%;
+                        cursor: pointer;
+                    }
+                }
+            }
+        }
+    }
+}
 
 
 
