--- a/OmneFictio.Web/wwwroot/css/theme.scss
+++ b/OmneFictio.Web/wwwroot/css/theme.scss
@@ -37,6 +37,7 @@
     --pd-actionbtns-color-hover1: #5e5e5e;
     --pd-actionbtns-color2: #444444;
     --pd-actionbtns-color-hover2: #5e5e5e;
+    --reply-bgcolor: #313131;
     //----------
 
     --searchplaceholder-color: #939393;
@@ -79,6 +80,7 @@
     --pd-actionbtns-color-hover1: #c5c5c5;
     --pd-actionbtns-color2: #c7c7c7;
     --pd-actionbtns-color-hover2: #bbbbbb;
+    --reply-bgcolor: #dcdcdc;
     //----------
 
     //#bda952
