--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -1,86 +1,3 @@
-:root {
-  --background-color1: #1D1D1D;
-  --background-color2: #313131;
-  --background-color-hover1: #373737;
-  --background-color-hover2: #4E4E4E;
-  --background-color-hover3: #5e5e5e;
-  --background-color-hover4: #3b3b3b;
-  --background-color-boxshadow1: #31313150;
-  --text-color1: #ffffff;
-  --text-color2: #bababa;
-  --text-color-hover1: #cccccc;
-  --text-color-boxshadow1: #ffffff50;
-  --text-color-boxshadow2: #ffffff70;
-  --headericon-color: #ffffff;
-  --accountdropdown-icon-hover: #ffffff10;
-  --dropdownbg-color: #313131;
-  --shortcuticons-color: #ffffff;
-  --navlink-readingtime-color: #415050;
-  --navlink-readingtime-color-hover: #607d7d;
-  --navlink-aboutyou-color: #473c3c;
-  --navlink-aboutyou-color-hover: #6c5959;
-  --navlink-others-color: #494152;
-  --navlink-others-color-hover: #5f5a66;
-  --register-form-color: #404040;
-  --register-input-color: #1d1d1d;
-  --publish-form-color: #404040;
-  --publish-input-color: #1d1d1d;
-  --pd-actionbtns-color: #444444;
-  --pd-actionbtns-color-hover1: #5e5e5e;
-  --pd-actionbtns-color2: #444444;
-  --pd-actionbtns-color-hover2: #5e5e5e;
-  --searchplaceholder-color: #939393;
-}
-
-.lightmode {
-  --background-color1: #f0f0f0;
-  --background-color2: #dcdcdc;
-  --background-color-hover1: #d1d8db;
-  --background-color-hover2: #c5c5c5;
-  --background-color-hover3: #c5c5c5;
-  --background-color-hover4: #b5b5b5;
-  --background-color-boxshadow1: #e5e5e550;
-  --text-color1: #282828;
-  --text-color2: #393939;
-  --text-color-hover1: #757575;
-  --text-color-boxshadow1: #00000050;
-  --text-color-boxshadow2: #00000070;
-  --headericon-color: #ffffff;
-  --accountdropdown-icon-hover:#00000010;
-  --dropdownbg-color: #e7e7e7;
-  --shortcuticons-color: #626262;
-  --navlink-readingtime-color: #9298b9;
-  --navlink-readingtime-color-hover: #777ea8;
-  --navlink-aboutyou-color: #a08888;
-  --navlink-aboutyou-color-hover: #8d6767;
-  --navlink-others-color: #9a90a6;
-  --navlink-others-color-hover: #816f96;
-  --register-form-color: #f0f0f0;
-  --register-input-color: #dcdcdc;
-  --publish-form-color: #f0f0f0;
-  --publish-input-color: #dcdcdc;
-  --pd-actionbtns-color: #c7c7c7;
-  --pd-actionbtns-color-hover1: #c5c5c5;
-  --pd-actionbtns-color2: #c7c7c7;
-  --pd-actionbtns-color-hover2: #bbbbbb;
-}
-
-/*
-.darkmode{
-    --background-color1: #1D1D1D;
-    --background-color2: #313131;
-    --background-color-hover1:#373737;
-    --background-color-hover2:#4E4E4E;
-    --background-color-hover3:#5e5e5e;
-    --background-color-hover4:#3b3b3b;
-    --background-color-boxshadow1:#31313150;
-
-    --text-color1: #ffffff;
-    --text-color2:#bababa;
-    --text-color-hover1: #cccccc;
-    --text-color-boxshadow1:#ffffff50;
-    --text-color-boxshadow2:#ffffff70;
-}*/
 /*----------SETTINGS---------*/
 html {
   font-size: 14px;
@@ -125,6 +42,22 @@ a:hover {
   position: fixed;
   background-color: rgba(0, 0, 0, 0.3764705882);
   z-index: 506;
+}
+
+.likebtn:hover {
+  color: #1198ff !important;
+}
+
+.dislikebtn:hover {
+  color: #bd1313 !important;
+}
+
+.likebtn.active {
+  color: #1198ff !important;
+}
+
+.dislikebtn.active {
+  color: #bd1313 !important;
 }
 
 /*-----------DESIGN-------------*/
