--- a/OmneFictio.Web/Views/Shared/_Layout.cshtml
+++ b/OmneFictio.Web/Views/Shared/_Layout.cshtml
@@ -43,8 +43,8 @@
          data-skip_prompt_cookie="UserAuth">
          <!--data-login_uri="https://localhost:7067/Auth/GoogleSigninDirectly">-->
     </div>
-    <div class="click-outside"></div>
-    <div class="modalbg"></div>
+    <div class="modalbg1"></div>
+    <div class="modalbg2"></div>
     <form class="login-modal" id="login-modal">
         <div class="lm-header">
             <span class="lm-title">Login</span>
