--- a/OmneFictio.Web/wwwroot/css/read.scss
+++ b/OmneFictio.Web/wwwroot/css/read.scss
@@ -2,6 +2,7 @@
 
 .read-nopost{
     display: flex;
+    width: 100%;
     justify-content: center;
     padding: 20px 0;
     color: var(--text-color1);
