--- a/OmneFictio.Web/wwwroot/css/site.css
+++ b/OmneFictio.Web/wwwroot/css/site.css
@@ -26,7 +26,7 @@ a:hover {
   color: unset;
 }
 
-.click-outside {
+.modalbg1 {
   display: none;
   width: 100%;
   height: 100%;
@@ -35,7 +35,7 @@ a:hover {
   z-index: 200;
 }
 
-.modalbg {
+.modalbg2 {
   display: none;
   width: 100%;
   height: 100%;
