--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -26,7 +26,7 @@ a{
 }
 
 //Background clickable shadows
-.click-outside{
+.modalbg1{
     display: none;
     width: 100%;
     height: 100%;
@@ -35,7 +35,7 @@ a{
     z-index: 200;
 }
 
-.modalbg{
+.modalbg2{
     display: none;
     width: 100%;
     height: 100%;
