--- a/OmneFictio.Web/wwwroot/css/post.scss
+++ b/OmneFictio.Web/wwwroot/css/post.scss
@@ -382,6 +382,7 @@ img{
                     height: 100%;
                     padding: 0 10px;
                     font-size: 1.6rem;
+                    cursor: pointer;
                     i{
                         display: flex;
                     }
@@ -505,7 +506,205 @@ img{
     }
 }
 
+.modal-replies{
+    //display: none;
+    display: flex;
+    flex-direction: column;
+    position: fixed;
+    left: 50%;
+    top: 40%;
+    transform: translate(-50%, -40%);
+    width: 92%;
+    max-width: 500px;
+    max-height: 90%;
+    background-color: var(--background-color2);
+    box-shadow: 0px 0px 6px 0px var(--background-color-boxshadow1);
+    border-radius: 20px 20px 10px 10px;
+    font-family: "Itim", cursive;
+    overflow-y: auto;
+    z-index: 200;
+    padding-bottom: 6px;
 
+    .mr-header{
+        border-bottom: 2px solid var(--background-color-hover4);
+        display: flex;
+        flex-direction: row;
+        span{
+            display: flex;
+            align-items: center;
+            padding-left: 20px;
+            font-size: 1.3rem;
+            margin-right: auto;
+        }
+        .mr-close{
+            cursor: pointer;
+            padding: 4px 12px 0px;
+            font-size: 1.8rem;
+            text-shadow: 0px 0px 6px var(--text-color-boxshadow1);
+        }
+    }
+    .mr-comment{
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        padding: 10px 6px 15px;
+        .mrc-header{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            font-family: "Itim", cursive;
+            .mrc-user{
+                display: flex;
+                align-items: center;
+                img{
+                    height: 1.7rem;
+                    width: 1.7rem;
+                    border-radius: 50%;
+                    cursor: pointer;
+                }
+                .mrc-username{
+                    font-size: 0.9rem;
+                    cursor: pointer;
+                    padding: 0 8px;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    overflow: hidden;
+                    max-width: 180px;
+                }
+            }
+            .mrc-menu{
+                display: flex;
+                height: 100%;
+                padding: 0 10px;
+                font-size: 1.6rem;
+                cursor: pointer;
+                i{
+                    display: flex;
+                }
+            }
+        }
+        .mrc-text{
+            margin: 6px 0;
+            font-size: 0.8rem;
+            font-family: "Gudea", sans-serif;
+            line-height: 1rem;
+            span{
+                flex-grow: 1;
+                display: -webkit-box;
+                -webkit-line-clamp: 10;
+                -webkit-box-orient: vertical;
+                overflow: hidden;
+            }
+        }
+        .mrc-footer{
+            .mrc-evaluation{
+                display: flex;
+                flex-direction: row;
+                align-items: center;
+                color: var(--text-color2);
+                i {
+                    font-size: 1.2rem;
+                    cursor: pointer;
+                    transition: color 0.2s ease;
+                }
+                .mrc-likes{
+                    padding: 0 8px;
+                }
+                .mrc-replybtn{
+                    margin-left: 10px;
+                    font-family: "Josefin Sans", sans-serif;
+                    color: var(--text-color1);
+                    padding: 2px 0 0;
+                    margin-bottom: -1px;
+                }
+            }
+        }
+    }
+    .mr-body{
+        .mr-reply{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            margin-bottom: 7px;
+            background-color: #424242;
+            padding: 6px 4px 3px;
+            .mrr-text{
+                margin-bottom: 4px;
+                font-size: 0.8rem;
+                font-family: "Gudea", sans-serif;
+                line-height: 1rem;
+                span{
+                    display: -webkit-box;
+                    -webkit-line-clamp: 10;
+                    -webkit-box-orient: vertical;
+                    overflow: hidden;
+                }
+            }
+            .mrr-footer{
+                font-family: "Itim", cursive;
+                display: flex;
+                flex-flow: wrap;
+                align-items: center;
+                .mrr-evaluation{
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-start;
+                    align-items: center;
+                    color: var(--text-color2);
+                    i {
+                        font-size: 1.1rem;
+                        cursor: pointer;
+                        transition: color 0.2s ease;
+                        display: flex;
+                    }
+                    .mrr-likes{
+                        padding: 0 4px;
+                    }
+                    .mrr-replybtn{
+                        margin-left: 8px;
+                        font-family: "Josefin Sans", sans-serif;
+                        color: var(--text-color1);
+                        margin-bottom: -3px;
+                        font-size: 0.9rem;
+                    }
+                }
+                .mrr-user{
+                    display: flex;
+                    align-items: center;
+                    margin-left: auto;
+                    .mrr-username{
+                        font-size: 0.8rem;
+                        cursor: pointer;
+                        padding: 0 4px;
+                        text-overflow: ellipsis;
+                        white-space: nowrap;
+                        overflow: hidden;
+                        max-width: 180px;
+                    }
+                    img{
+                        height: 1.3rem;
+                        width: 1.3rem;
+                        border-radius: 50%;
+                        cursor: pointer;
+                    }
+                    .mrr-menu{
+                        display: flex;
+                        height: 100%;
+                        padding: 0 7px;
+                        font-size: 1.6rem;
+                        cursor: pointer;
+                        i{
+                            display: flex;
+                        }
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+.modalbg1{display: block;}
 
 
 
@@ -553,6 +752,19 @@ img{
     .add_comment-cont .ac-footer .comment-btn{
         text-decoration: unset;
     }
+    
+    .modal-replies{
+        max-width: 650px;
+        max-height: 60%;
+        .mr-comment .mrc-text{
+            padding: 0 10px;
+            font-size: 0.9rem;
+        }
+        .mr-body .mr-reply{
+            padding: 6px 10px 3px;
+            font-size: 0.9rem;
+        }
+    }
 }
 
 // Large devices (desktops, 992px and up)
@@ -565,6 +777,10 @@ img{
         .post-more{
             width: 40%;
         }
+    }
+    
+    .modal-replies{
+        max-width: 900px;
     }
 }
 
