--- a/OmneFictio.Web/wwwroot/css/site.scss
+++ b/OmneFictio.Web/wwwroot/css/site.scss
@@ -427,8 +427,8 @@ header{
         font-size: 2rem;
         cursor: pointer;
         transition: 0.3s ease;
-        &:hover {
-        }
+        /*&:hover {
+        }*/
     }
 }
 
